src/app/app.component.css
.header-wrapper {
    background-color: var(--bg-color);
    color: var(--text-color);
    width: 100%;
    padding: 0.5rem 0;
    box-shadow: 0px 0px 1px var(--text-color);
    position: fixed;
    z-index: 300;
}

.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1.5rem;
}

.nav-left {
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 1rem;
    width: 50px;
}

.nav-left .icons:hover {
    color: var(--primary-variant-color);
}

.nav-middle {
    position: relative;
    width: calc(100% - 120px - 3rem);
}

.nav-middle::after {
    content: "";
    position: absolute;
    right: -10px;
    top: 25%;
    width: 3px;
    height: 50%;
    background-color: var(--primary-variant-color);
    border-radius: 2px;
}

.search-wrapper {
    background-color: var(--bg-surface-color);
    border-radius: 3px;
    display: flex;
    align-items: center;
    width: 100%;
    padding: 0.1rem 1rem;
    gap: 0.5rem;
}

.search-wrapper .icons:hover {
    color: var(--primary-variant-color);
}

.search-wrapper input {
    background-color: transparent;
    outline: none;
    border: none;
    color: var(--text-color);
    height: 2rem;
    font-size: 1.1rem;
    font-family: var(--poppin);
    font-weight: 300;
    width: 100%;
}

.nav-right {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 1rem;
    width: 70px;
}

.nav-right .icons:first-of-type {
    background-color: var(--primary-color);
    padding:0.3rem 0.6rem;
    border-radius: 3px;
    color: #212121;
}

.nav-right .icons:last-of-type:hover {
    opacity: 0.5;
    color: #fff;
}


/* main content  */
.main-content {
    transform: translateY(51.2px);
    height: calc(100vh - 51.2px);
    color: var(--text-color);
    overflow-y: auto;
    scroll-behavior:smooth;
}

.main-content::-webkit-scrollbar {
    width: 5px;
}

.main-content::-webkit-scrollbar-thumb {
    background-color: var(--primary-color);
    border-radius: 5px;
}

.main-content::-webkit-scrollbar-track {
    box-shadow: 0px 0px 1px var(--text-color);
    border-radius: 5px;
    background-color: var(--bg-surface-color);
    overflow: hidden;
}

@media only screen and (max-width: 1050px) {

}

